--- a/sass/styles.css
+++ b/sass/styles.css
@@ -1,252 +1,2 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline; }
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block; }
-
-body {
-  line-height: 1; }
-
-ol, ul {
-  list-style: none; }
-
-blockquote, q {
-  quotes: none; }
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-*,
-*::before,
-*::after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
-
-body {
-  background-color: black;
-  color: #fff;
-  font: 1rem/1.5 "Montserrat", Arial, Helvetica, sans-serif;
-  text-align: center; }
-
-.header {
-  margin: 20px auto; }
-  @media only screen and (min-width: 650px) {
-    .header {
-      margin-top: 40px;
-      margin-bottom: 40px; } }
-  .header__title {
-    font-size: 3em;
-    letter-spacing: 2px; }
-    @media only screen and (min-width: 650px) {
-      .header__title {
-        font-size: 5em; } }
-
-.status-display {
-  margin: 20px auto; }
-  .status-display__title {
-    font-size: 2em;
-    text-transform: capitalize; }
-
-@media only screen and (min-width: 650px) {
-  .timer-container {
-    display: flex;
-    justify-content: space-evenly; }
-    .timer-container > :nth-child(1) {
-      order: 2; }
-    .timer-container > :nth-child(2) {
-      order: 1;
-      align-self: center; }
-    .timer-container > :nth-child(3) {
-      order: 3;
-      align-self: center; } }
-
-.timer {
-  padding: 50px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-  @media only screen and (min-width: 650px) {
-    .timer {
-      margin: 0; } }
-  .timer__orbit {
-    height: 13em;
-    width: 13em;
-    position: absolute;
-    border-radius: 100%; }
-    .timer__orbit--animation {
-      -webkit-animation-name: spin;
-      -webkit-animation-delay: 0s;
-      -webkit-animation-duration: 0s;
-      -webkit-animation-timing-function: linear;
-      -webkit-animation-iteration-count: 1;
-      -moz-animation-name: spin;
-      -moz-animation-delay: 0s;
-      -moz-animation-duration: 0s;
-      -moz-animation-timing-function: linear;
-      -moz-animation-iteration-count: 1;
-      -o-animation-name: spin;
-      -o-animation-delay: 0s;
-      -o-animation-duration: 0s;
-      -o-animation-timing-function: linear;
-      -o-animation-iteration-count: 1;
-      animation-name: spin;
-      animation-delay: 0s;
-      animation-duration: 0s;
-      animation-timing-function: linear;
-      animation-iteration-count: 1; }
-  .timer__star {
-    height: 12em;
-    width: 12em;
-    background: #ffbb00;
-    border: 2px solid #fff;
-    border-radius: 100%;
-    margin: 0 auto;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-  .timer__text {
-    font-size: 3em; }
-
-@-webkit-keyframes spin {
-  0% {
-    transform: rotate(0deg); }
-  100% {
-    transform: rotate(360deg); } }
-@-moz-keyframes spin {
-  0% {
-    transform: rotate(0deg); }
-  100% {
-    transform: rotate(360deg); } }
-@-o-keyframes spin {
-  0% {
-    transform: rotate(0deg); }
-  100% {
-    transform: rotate(360deg); } }
-@keyframes spin {
-  0% {
-    transform: rotate(0deg); }
-  100% {
-    transform: rotate(360deg); } }
-.orbit__planet {
-  position: absolute;
-  height: 10px;
-  width: 10px;
-  background: #fff;
-  border: transparent;
-  border-radius: 100%;
-  left: 6em;
-  top: -25px; }
-
-.session {
-  display: inline-block;
-  margin-right: 5px;
-  margin-bottom: 20px; }
-  .session__container {
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-    .session__container > :nth-child(2) {
-      margin: 0 15px; }
-  @media only screen and (min-width: 325px) {
-    .session {
-      margin-right: 20px; } }
-  @media only screen and (min-width: 430px) {
-    .session {
-      font-size: 1.5em; } }
-  @media only screen and (min-width: 650px) {
-    .session {
-      display: block;
-      margin: 0; } }
-
-.break {
-  display: inline-block;
-  margin-left: 5px;
-  margin-bottom: 20px; }
-  .break__container {
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-    .break__container > :nth-child(2) {
-      margin: 0 15px; }
-  @media only screen and (min-width: 325px) {
-    .break {
-      margin-left: 20px; } }
-  @media only screen and (min-width: 430px) {
-    .break {
-      font-size: 1.5em; } }
-  @media only screen and (min-width: 650px) {
-    .break {
-      display: block;
-      margin: 0; } }
-
-.btn__timer {
-  outline: none; }
-  .btn__timer--left {
-    background: transparent;
-    border-top: 18px solid transparent;
-    border-bottom: 18px solid transparent;
-    border-right: 24px solid #fff;
-    border-left: none;
-    border-radius: 15%; }
-  .btn__timer--right {
-    background: transparent;
-    border-top: 18px solid transparent;
-    border-bottom: 18px solid transparent;
-    border-left: 24px solid #fff;
-    border-right: none;
-    border-radius: 15%; }
-
-.control {
-  margin: 20px auto;
-  padding: 40px 0; }
-  .control__btn {
-    outline: none;
-    background-color: #00ce7f;
-    color: #fff;
-    border: 2px solid #fff;
-    border-radius: 4px;
-    text-transform: uppercase;
-    width: 90px;
-    height: 40px; }
-    .control__btn--start {
-      margin: 0 5px; }
-      @media only screen and (min-width: 325px) {
-        .control__btn--start {
-          margin: 0 15px; } }
-      @media only screen and (min-width: 360px) {
-        .control__btn--start {
-          margin: 0 20px; } }
-      @media only screen and (min-width: 650px) {
-        .control__btn--start {
-          margin: 0 40px; } }
-
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}*,*::before,*::after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}body{background-color:#000;color:#fff;font:1rem/1.5 "Montserrat", Arial, Helvetica, sans-serif;text-align:center}.header{margin:20px auto}@media only screen and (min-width: 650px){.header{margin-top:40px;margin-bottom:40px}}.header__title{font-size:3em;letter-spacing:2px}@media only screen and (min-width: 650px){.header__title{font-size:5em}}.status-display{margin:20px auto}.status-display__title{font-size:2em;text-transform:capitalize}@media only screen and (min-width: 650px){.timer-container{display:flex;justify-content:space-evenly}.timer-container>:nth-child(1){order:2}.timer-container>:nth-child(2){order:1;align-self:center}.timer-container>:nth-child(3){order:3;align-self:center}}.timer{padding:50px;margin:0 auto;display:flex;justify-content:center;align-items:center}@media only screen and (min-width: 650px){.timer{margin:0}}.timer__orbit{height:13em;width:13em;position:absolute;border-radius:100%}.timer__orbit--animation{-webkit-animation-name:spin;-webkit-animation-delay:0s;-webkit-animation-duration:0s;-webkit-animation-timing-function:linear;-webkit-animation-iteration-count:1;-moz-animation-name:spin;-moz-animation-delay:0s;-moz-animation-duration:0s;-moz-animation-timing-function:linear;-moz-animation-iteration-count:1;-o-animation-name:spin;-o-animation-delay:0s;-o-animation-duration:0s;-o-animation-timing-function:linear;-o-animation-iteration-count:1;animation-name:spin;animation-delay:0s;animation-duration:0s;animation-timing-function:linear;animation-iteration-count:1}.timer__star{height:12em;width:12em;background:#fb0;border:2px solid #fff;border-radius:100%;margin:0 auto;position:relative;display:flex;justify-content:center;align-items:center}.timer__text{font-size:3em}@-webkit-keyframes spin{0%{transform:rotate(0deg)}100%{transform:rotate(360deg)}}@-moz-keyframes spin{0%{transform:rotate(0deg)}100%{transform:rotate(360deg)}}@-o-keyframes spin{0%{transform:rotate(0deg)}100%{transform:rotate(360deg)}}@keyframes spin{0%{transform:rotate(0deg)}100%{transform:rotate(360deg)}}.orbit__planet{position:absolute;height:10px;width:10px;background:#fff;border:transparent;border-radius:100%;left:6em;top:-25px}.session{display:inline-block;margin-right:5px;margin-bottom:20px}.session__container{display:flex;justify-content:center;align-items:center}.session__container>:nth-child(2){margin:0 15px}@media only screen and (min-width: 325px){.session{margin-right:20px}}@media only screen and (min-width: 430px){.session{font-size:1.5em}}@media only screen and (min-width: 650px){.session{display:block;margin:0}}.break{display:inline-block;margin-left:5px;margin-bottom:20px}.break__container{display:flex;justify-content:center;align-items:center}.break__container>:nth-child(2){margin:0 15px}@media only screen and (min-width: 325px){.break{margin-left:20px}}@media only screen and (min-width: 430px){.break{font-size:1.5em}}@media only screen and (min-width: 650px){.break{display:block;margin:0}}.btn__timer{outline:none}.btn__timer--left{background:transparent;border-top:18px solid transparent;border-bottom:18px solid transparent;border-right:24px solid #fff;border-left:none;border-radius:15%}.btn__timer--right{background:transparent;border-top:18px solid transparent;border-bottom:18px solid transparent;border-left:24px solid #fff;border-right:none;border-radius:15%}.control{margin:20px auto;padding:40px 0}.control__btn{outline:none;background-color:#00ce7f;color:#fff;border:2px solid #fff;border-radius:4px;text-transform:uppercase;width:90px;height:40px}.control__btn--start{margin:0 5px}@media only screen and (min-width: 325px){.control__btn--start{margin:0 15px}}@media only screen and (min-width: 360px){.control__btn--start{margin:0 20px}}@media only screen and (min-width: 650px){.control__btn--start{margin:0 40px}}
 /*# sourceMappingURL=styles.css.map */
